samples/_failures_safe/1761157014_4b61a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_beac73f3.c: In function ‘main’:
./samples/SAFE/__tmp_beac73f3.c:136:19: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  136 |     print_matrix(&mat
      |                   ^~~
      |                   mat2
./samples/SAFE/__tmp_beac73f3.c:136:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_beac73f3.c:136:22: error: expected ‘)’ at end of input
  136 |     print_matrix(&mat
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_beac73f3.c:136:5: error: expected declaration or statement at end of input
  136 |     print_matrix(&mat
      |     ^~~~~~~~~~~~
